chaged the port number

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=pass@word1
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.h2.console.enabled=true
-
+server.port=8090
 
 eureka.client.serviceUrl.defaultZone=http://registry-sr:8761/eureka/
 
